feature: Adicionando validação JWT no swagger
