# controller/user.go
@@ -19,6 +19,18 @@ func NewUserController(userHandler handlers.UserHandler) UserCOntroller {
 	}
 }
 
+// @Summary			Cadastrar usuário.
+// @Description		Cadastrar usuário.
+// @Tags 			User
+// @Accept 			json
+// @Produce			json
+// @Param 			user body model.User true "user"
+// @Success			201 {object} string
+// @Router			/api/secured/user/register [post]
+// @securityDefinitions.apiKey authorization
+// @in header
+// @name Authorization
+// @Security JWT
 func (u *UserCOntroller) RegisterUser(ctx *gin.Context) {
 	var user model.User
 	if err := ctx.ShouldBindJSON(&user); err != nil {
@@ -38,6 +50,5 @@ func (u *UserCOntroller) RegisterUser(ctx *gin.Context) {
 		ctx.Abort()
 		return
 	}
-	ctx.JSON(http.StatusCreated, gin.H{"ID": user.ID, "email": user.Email, "username": user.Username})
-
+	ctx.JSON(http.StatusCreated, gin.H{"email": user.Email, "username": user.Username})
 }
