# model/user.go
@@ -6,11 +6,11 @@ import (
 )
 
 type User struct {
-	gorm.Model
-	Name     string `json:"name"`
-	Username string `json:"username" gorm:"unique"`
-	Email    string `json:"email" gorm:"unique"`
-	Password string `json:"password"`
+	gorm.Model `swaggerignore:"true"`
+	Name       string `json:"name"`
+	Username   string `json:"username" gorm:"unique"`
+	Email      string `json:"email" gorm:"unique"`
+	Password   string `json:"password"`
 }
 
 func (u *User) HashPassword(password string) error {
